--- a/scss/__aerok.scss
+++ b/scss/__aerok.scss
@@ -22,6 +22,9 @@
     position: relative;
     width: 100%;
     background-image: url(../images/aerok/aerok_visual.jpg);
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-size: cover;
     .wrapper {
         @include flex-col;
         justify-content: center;
@@ -188,7 +191,7 @@
 }
 .device {
     padding: 5.88em 0;
-    background: url(../images/aerok/bg_01.jpg);
+    background: url(../images/aerok/bg_01.jpg) no-repeat center center / cover;
     .wrapper {
         @include flex-center;
         flex-direction: column;
@@ -200,7 +203,6 @@
         }
         .inner {
             display: flex;
-            gap: 0.94em;
             font-size: $body-L;
             font-weight: 700;
             color: $bg-color;
@@ -259,6 +261,7 @@
             }
             .inner {
                 @include flex-col;
+                justify-content: space-around;
                 span {
                     width: 109px;
                     font-size: $title-L;
@@ -290,6 +293,7 @@
             .inner {
                 width: 109px;
                 @include flex-col;
+                justify-content: space-around;
                 span {
                     font-size: $title-L;
                     font-weight: 700;
