푸터 빼고 전체공용 wrapper에 width auto 카운트 매니저 margin 0 auto 줌
..

--- a/scss/__mannger.scss
+++ b/scss/__mannger.scss
@@ -2,6 +2,7 @@
     h2.skip{}
     .wrapper {
         width: 100%;
+        margin: 0 auto;
         .photo {
             img {
                 width: 100%;
