--- a/css/main.css
+++ b/css/main.css
@@ -1195,6 +1195,7 @@ header .wrapper .gnb ul li a span:hover {
 
 .mannger .wrapper {
   width: 100%;
+  margin: 0 auto;
 }
 .mannger .wrapper .photo img {
   width: 100%;
@@ -1203,6 +1204,7 @@ header .wrapper .gnb ul li a span:hover {
 }
 
 .count .wrapper {
+  margin: 0 auto;
   width: 100%;
 }
 .count .wrapper .photo img {
@@ -1213,6 +1215,7 @@ header .wrapper .gnb ul li a span:hover {
 
 @media (max-width: 1440px) {
   .wrapper {
+    width: auto;
     margin: 0 20px;
   }
 }
@@ -1538,11 +1541,6 @@ footer .wrapper {
   gap: 1.41em;
   padding: 3.52em 0;
   height: 554px;
-}
-@media (max-width: 1440px) {
-  footer .wrapper {
-    width: auto;
-  }
 }
 footer .wrapper h2 {
   font-size: 2.94rem;
