20250317-전남대학교 디자인 시안만올림
추가된거
1. 헤더에 전남대학교
2. 전남대학교 폴더
3. 전남대학교 페이지

--- a/scss/__rot.scss
+++ b/scss/__rot.scss
@@ -87,6 +87,7 @@
         }
         .top_inner {
             display: flex;
+            align-items: center;
             gap: 5.88em;
             .title {
                 flex: 1;
