--- a/scss/__chonnam.scss
+++ b/scss/__chonnam.scss
@@ -1,27 +1,7 @@
-@keyframes ShakeUpDown {
-    0%, 100%, 5% {transform:translateY(0);}
-    10%, 30%, 50%, 70% {transform:translateY(-10px);}
-    20%, 40%, 60% {transform:translateY(10px);}
-    80% {transform:translateY(8px);}
-    90% {transform:translateY(-8px);}
-}
-@keyframes motion{
-    25%{
-      opacity: 1;
-    }
-    50%{
-      opacity: 1;
-      transform: translateY(15px);
-    }
-    100%{
-      opacity: 0;
-      transform: translateY(30px);
-    }
-  }
-.aerok_visual {
+.ch_visual {
     position: relative;
     width: 100%;
-    background-image: url(../images/aerok/aerok_visual.jpg);
+    background-image: url(../images/chonnam/visual01.jpg);
     background-position: center center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -50,26 +30,26 @@
                 }
             }
         }
-        .inner {
-            display: flex;
-            gap: 0.94em;
-            font-size: $body-L;
-            font-weight: 700;
-            .renewal_site {
-                a {
-                    display: flex;
-                    padding: 0.52em 1.05em;
-                    border: 1px solid #256EF4;
-                    border-radius: 100px;
-                    background-color: #256EF4;
-                    &:hover {
-                        background-color: #0B54DA;
-                        border: 1px solid #0B54DA;
-                        transition: 0.1s;
-                    }
-                }
-            }
-        }
+        // .inner {
+        //     display: flex;
+        //     gap: 0.94em;
+        //     font-size: $body-L;
+        //     font-weight: 700;
+        //     .renewal_site {
+        //         a {
+        //             display: flex;
+        //             padding: 0.52em 1.05em;
+        //             border: 1px solid #256EF4;
+        //             border-radius: 100px;
+        //             background-color: #256EF4;
+        //             &:hover {
+        //                 background-color: #0B54DA;
+        //                 border: 1px solid #0B54DA;
+        //                 transition: 0.1s;
+        //             }
+        //         }
+        //     }
+        // }
         .arrow_div {
             position: absolute;
             left: calc(50% - 11px);
@@ -89,7 +69,7 @@
         }
     }
 }
-.design_concept {
+.ch_design_concept {
     padding: 5.88em 0;
     .wrapper {
         @include flex-col;
@@ -111,7 +91,7 @@
             }
             .typography {
                 @include flex-col;
-                color: #002554;
+                color: #008736;
                 span {
                     font-size: $title-XXL;
                     font-weight: 700;
@@ -137,11 +117,11 @@
             }
             .prmary {
                 width: 40%;
-                background-color: #002554;
+                background-color: #008736;
             }
             .secondary {
                 width: 40%;
-                background-color: #FFA600;
+                background-color: #14331A;
             }
             .title_90 {
                 width: 20%;
@@ -170,12 +150,12 @@
             img {
                 width: 100%;
                 height: 100%;
-                object-fit: cover;
+                object-fit: contain;
             }
         }
     }
 }
-.page_detail {
+.ch_page_detail {
     padding: 5.88em 0;
     h2.skip {
     }
@@ -190,9 +170,9 @@
         }
     }
 }
-.device {
+.ch_device {
     padding: 5.88em 0;
-    background: url(../images/aerok/bg_01.jpg) no-repeat center center / cover;
+    background: url(../images/chonnam/mobile_bg.jpg) no-repeat center center / cover;
     .wrapper {
         @include flex-center;
         flex-direction: column;
