--- a/scss/__sejong.scss
+++ b/scss/__sejong.scss
@@ -92,6 +92,7 @@
         .top_inner {
             display: flex;
             gap: 5.88em;
+            align-items: center;
             .title {
                 flex: 1;
                 span {
