--- a/scss/__common.scss
+++ b/scss/__common.scss
@@ -30,6 +30,8 @@ $bg-color:#fff;
 $bg-color-2: #F8F8F8;
 $footer:#343849;
 $footer-header:#3E4253;
-$footer-depth2 :#3E4249;
+$footer-depth2:#3E4249;
+$opacity-white: rgba(255, 255, 255, 0.2);
+$opacity-black: rgba(0, 0, 0, 0.4);
 /*******/
 
