--- a/scss/main.scss
+++ b/scss/main.scss
@@ -169,10 +169,10 @@
                             padding: 0.38em 0.76em;
                             font-size: $sub;
                             font-weight: 700;
-                            border: 1px solid $primary-color-50;
+                            border: 1px solid $opacity-white;
                             border-radius: 100px;
-                            color: $primary-color-50;
-                            background-color: $bg-color;
+                            color: $bg-color;
+                            background-color: $opacity-white;
                         }
                         em {
                             z-index: 10;
