--- a/scss/main.scss
+++ b/scss/main.scss
@@ -132,9 +132,6 @@
         @include flex-col;
         width: 1440px;
         gap: 1.88em;
-        @media (max-width:1440px){
-            width: 1260px;
-        }
             .title{
                 h2 {
                     font-size: $visual-L;
@@ -148,19 +145,35 @@
             }
     }
     .project_popup {
-        @include flex-col;
-        gap: 1.88em;
+        // @include flex-col;
+        // gap: 10px;
         .swiper {   
             width: 1440px;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            gap: 0.58em;
             @media (max-width:1260px){
-                width: 1260px;
+                width: 100%;    
             }
             ul {
+                display: flex;
+                gap: 0.58em;
+                // width: 100%;
+                // height: 100%;
+                @media (max-width:1260px){
+                    width: 100%;
+                }
                 li {
+                    @media (max-width:1260px){
+                        width: 100%;
+                    }
                     a {               
                         position: relative;
                         @include flex-col;
                         gap: 0.94em;
+                        overflow: hidden;
+                        border-radius: 0.58rem;
                         strong {
                             z-index: 10;
                             position: absolute;
@@ -198,6 +211,12 @@
                             overflow: hidden;
                             font-size: 0;
                             line-height: 0;
+                            width: 470.19px;
+                            height: 494px;
+                            @media (max-width:1260px){
+                                width: 100%;
+                                height: 400px;
+                            }
                             img {
                                 width: 100%;
                                 height: 100%;
@@ -205,81 +224,23 @@
                             }
                         }
                         span {
+                            position: absolute;
+                            display: none;
+                            align-items: flex-end;
+                            padding: 0 1.41em 1.41em;
+                            width: 100%;
+                            height: 100%;
                             font-size: $title-XL;
                             font-weight: 700;
-                            color: $primary-color-50;
+                            color: $bg-color;
+                            background: linear-gradient(180deg, rgba(255, 255, 255, 0.00) 34.77%, #1040FF 125.57%);
+                        }
+                        &:hover span {
+                            display: flex;
+                            // animation: FadeIn 0.2s ease both;
+                            transition: 0.2s;
                         }
                     }
-                }
-            }
-        }
-        .swiper_nav {
-            position: static;
-            .wrapper {
-                display: flex;
-                flex-direction: row;
-                gap: 0;
-                .prev {
-                    transition: 0.2s;
-                    font-size: 0;
-                    line-height: 0;
-                    width: 2.94rem;
-                    height: 2.94rem;
-                    background-image: url("data:image/svg+xml,%3Csvg width='50' height='50' viewBox='0 0 50 50' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M19.313 25L27.0833 32.7906L28.4156 31.4063L22.0094 25L28.4156 18.5938L27.0833 17.2297L19.313 25ZM6.57031 25.0094C6.57031 22.4611 7.05451 20.0642 8.02291 17.8187C8.99132 15.5733 10.3054 13.62 11.9651 11.9589C13.6252 10.2977 15.5747 8.98437 17.8135 8.01875C20.0524 7.05312 22.4448 6.57031 24.9906 6.57031C27.5389 6.57031 29.9358 7.05451 32.1813 8.02292C34.4267 8.99132 36.38 10.3054 38.0411 11.9651C39.7023 13.6252 41.0156 15.5747 41.9812 17.8135C42.9469 20.0524 43.4297 22.4448 43.4297 24.9906C43.4297 27.5389 42.9455 29.9358 41.9771 32.1813C41.0087 34.4267 39.6946 36.38 38.0349 38.0411C36.3752 39.7023 34.4257 41.0156 32.1865 41.9812C29.9476 42.9469 27.5552 43.4297 25.0094 43.4297C22.4611 43.4297 20.0642 42.9455 17.8187 41.9771C15.5733 41.0087 13.62 39.6946 11.9589 38.0349C10.2977 36.3752 8.98437 34.4257 8.01875 32.1865C7.05312 29.9476 6.57031 27.5552 6.57031 25.0094Z' fill='%231040FF'/%3E%3C/svg%3E%0A");
-                    @include bg;
-                    &:hover{
-                        background-image: url("data:image/svg+xml,%3Csvg width='50' height='50' viewBox='0 0 50 50' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M19.313 25L27.0833 32.7906L28.4156 31.4063L22.0094 25L28.4156 18.5938L27.0833 17.2297L19.313 25ZM6.57031 25.0094C6.57031 22.4611 7.05451 20.0642 8.02291 17.8187C8.99132 15.5733 10.3054 13.62 11.9651 11.9589C13.6252 10.2977 15.5747 8.98437 17.8135 8.01875C20.0524 7.05312 22.4448 6.57031 24.9906 6.57031C27.5389 6.57031 29.9358 7.05451 32.1813 8.02292C34.4267 8.99132 36.38 10.3054 38.0411 11.9651C39.7023 13.6252 41.0156 15.5747 41.9812 17.8135C42.9469 20.0524 43.4297 22.4448 43.4297 24.9906C43.4297 27.5389 42.9455 29.9358 41.9771 32.1813C41.0087 34.4267 39.6946 36.38 38.0349 38.0411C36.3752 39.7023 34.4257 41.0156 32.1865 41.9812C29.9476 42.9469 27.5552 43.4297 25.0094 43.4297C22.4611 43.4297 20.0642 42.9455 17.8187 41.9771C15.5733 41.0087 13.62 39.6946 11.9589 38.0349C10.2977 36.3752 8.98437 34.4257 8.01875 32.1865C7.05312 29.9476 6.57031 27.5552 6.57031 25.0094Z' fill='%23002CDB'/%3E%3C/svg%3E%0A");    
-                    }
-                }
-                .next {
-                    transition: 0.2s;
-                    font-size: 0;
-                    line-height: 0;
-                    width: 2.94rem;
-                    height: 2.94rem;
-                    background-image: url("data:image/svg+xml,%3Csvg width='50' height='50' viewBox='0 0 50 50' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M30.687 25L22.9167 17.2094L21.5844 18.5937L27.9906 25L21.5844 31.4062L22.9167 32.7703L30.687 25ZM43.4297 24.9906C43.4297 27.5389 42.9455 29.9358 41.9771 32.1812C41.0087 34.4267 39.6946 36.38 38.0349 38.0411C36.3748 39.7023 34.4253 41.0156 32.1865 41.9812C29.9476 42.9469 27.5552 43.4297 25.0094 43.4297C22.4611 43.4297 20.0642 42.9455 17.8187 41.9771C15.5733 41.0087 13.62 39.6946 11.9589 38.0349C10.2977 36.3748 8.98437 34.4253 8.01875 32.1865C7.05312 29.9476 6.57031 27.5552 6.57031 25.0094C6.57031 22.4611 7.05451 20.0642 8.02291 17.8187C8.99132 15.5733 10.3054 13.62 11.9651 11.9589C13.6248 10.2977 15.5743 8.98438 17.8135 8.01875C20.0524 7.05313 22.4448 6.57031 24.9906 6.57031C27.5389 6.57031 29.9358 7.05451 32.1812 8.02291C34.4267 8.99132 36.38 10.3054 38.0411 11.9651C39.7023 13.6248 41.0156 15.5743 41.9812 17.8135C42.9469 20.0524 43.4297 22.4448 43.4297 24.9906Z' fill='%23E4E4E4'/%3E%3C/svg%3E%0A");
-                    @include bg;
-                    &:hover {
-                        background-image: url("data:image/svg+xml,%3Csvg width='50' height='50' viewBox='0 0 50 50' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M30.687 25L22.9167 17.2094L21.5844 18.5937L27.9906 25L21.5844 31.4062L22.9167 32.7703L30.687 25ZM43.4297 24.9906C43.4297 27.5389 42.9455 29.9358 41.9771 32.1812C41.0087 34.4267 39.6946 36.38 38.0349 38.0411C36.3748 39.7023 34.4253 41.0156 32.1865 41.9812C29.9476 42.9469 27.5552 43.4297 25.0094 43.4297C22.4611 43.4297 20.0642 42.9455 17.8187 41.9771C15.5733 41.0087 13.62 39.6946 11.9589 38.0349C10.2977 36.3748 8.98437 34.4253 8.01875 32.1865C7.05312 29.9476 6.57031 27.5552 6.57031 25.0094C6.57031 22.4611 7.05451 20.0642 8.02291 17.8187C8.99132 15.5733 10.3054 13.62 11.9651 11.9589C13.6248 10.2977 15.5743 8.98438 17.8135 8.01875C20.0524 7.05313 22.4448 6.57031 24.9906 6.57031C27.5389 6.57031 29.9358 7.05451 32.1812 8.02291C34.4267 8.99132 36.38 10.3054 38.0411 11.9651C39.7023 13.6248 41.0156 15.5743 41.9812 17.8135C42.9469 20.0524 43.4297 22.4448 43.4297 24.9906Z' fill='%23C9C9C9'/%3E%3C/svg%3E%0A");    
-                    }
-                }
-            }
-        }
-    }
-}
-.works {
-    padding: 3.52em 0;
-    .wrapper {
-        display: flex;
-        justify-content: space-between;
-            align-items: center;
-        width: 1440px;
-        @media (max-width:1440px){
-            width: auto;
-        }
-        .title {
-            h2 {
-                font-size: $visual-L;
-                font-weight: 700;
-                color: $primary-color-50;
-            }
-            span{
-                font-weight: 700;
-                color: $primary-color-50;
-            }
-        }
-        .more {
-            a {
-                display: flex;
-                padding: 0.45em 0.9em;
-                font-size: $visual-s;
-                font-weight: 700;
-                color: $bg-color;
-                background-color: $primary-color-50;
-                border-radius: 100px;
-                &:hover {
-                    background-color: $hover-color-50;
-                    transition: 0.1s;
                 }
             }
         }
