--- a/scss/__mannger.scss
+++ b/scss/__mannger.scss
@@ -2,6 +2,7 @@
     h2.skip{}
     .wrapper {
         width: 100%;
+        padding: 0 140px;   
         margin: 0 auto;
         .photo {
             img {
@@ -10,5 +11,10 @@
                 object-fit: contain;
             }
         }
+    }
+    @media (max-width:1260px){
+      .wrapper {
+        padding: 0 0;
+      }
     }
 }
