.about width 값 수정 1440px
되돌리고싶으면 width값 삭제하면됨

--- a/css/main.css
+++ b/css/main.css
@@ -1609,6 +1609,7 @@ header .wrapper .gnb ul li a span:hover {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  width: 1440px;
   padding: 3.52em 0;
 }
 .about .wrapper .left_inner {
