--- a/scss/main.scss
+++ b/scss/main.scss
@@ -83,6 +83,7 @@
         display: flex;
         justify-content: space-between;
         align-items: center;
+        width: 1440px;
         padding: 3.52em 0;
         h2.skip{}
         .left_inner {
