--- a/scss/main.scss
+++ b/scss/main.scss
@@ -83,8 +83,8 @@
         display: flex;
         justify-content: space-between;
         align-items: center;
-        width: 1440px;
         padding: 3.52em 0;
+        width: 1440px;
         h2.skip{}
         .left_inner {
             @include flex-col;
@@ -122,6 +122,12 @@
                     }
                 }
             }
+        }
+    }
+    @media (max-width:1440px){
+        .wrapper {
+            width: auto !important;
+            margin: 0 20px;
         }
     }
 }
